--- a/homepage/about.html
+++ b/homepage/about.html
@@ -77,7 +77,8 @@
 
 <section id="about">
   <h2>劇団紹介</h2>
-  <p>劇団つぎはぎは、「誰かの心にそっと寄り添う舞台」を目指して活動している小劇団です。オリジナル脚本・演出を中心に、温かみのある作品を制作しています。</p>
+  <p>大和天音を主宰に中等教育学校演劇部の2024年度卒業代を中心に結成。個性のある役者陣が多く、会話劇を中心としたコメディを得意とする。劇団名は、あまりにも纏まりがなく自由なメンバーが、なんとかお互いの短所を補い合って成立していることから決定。
+継いで、剥いで、あなたを魅せる舞台を作る。</p>
   <h3>メンバー紹介</h3>
   <div class="member">● 大和 天音 （脚本・演出・役者）</div>
   <div class="member">● ゆな（役者）</div>
