--- a/homepage/home.html
+++ b/homepage/home.html
@@ -75,6 +75,9 @@
   <a href="#contact">お問い合わせ</a>
 </nav>
 
+<section id="home">
+</section>
+
 <section id="shows">
   <h2>公演情報</h2>
   <h3>【最新公演】</h3>
@@ -93,7 +96,7 @@
 <section id="contact">
   <h2>お問い合わせ</h2>
   <p>出演依頼・取材・その他のお問い合わせは、以下のメールまたはSNSまでご連絡ください。</p>
-  <p>📧 メール：tsugihagi.theatretroup@gmail.com</p>
+  <p>📧 メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a></p>
   <p>📱 Twitter：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi</a></p>
   <p>📸 Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi</a></p>
 </section>
