支援ページとチケット予約ページのボタンを横並びで表示

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -89,8 +89,10 @@
 <section id="support">
   <h2>支援・チケット</h2>
   <p>劇団つぎはぎでは、クラウドファンディングやチケットのご予約を受け付けております。</p>
-  <a class="public-btn" href="https://example.com" target="_blank">支援ページはこちら</a><br>
+  <div class="button-row">
+  <a class="public-btn" href="https://example.com" target="_blank">支援ページはこちら</a>
   <a class="public-btn" href="https://example.com/ticket" target="_blank">チケット予約ページ</a>
+  </div>
 </section>
 
 <section id="contact">
