--- a/homepage/home.html
+++ b/homepage/home.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>劇団つぎはぎ - 公式サイト</title>
+  <link rel="stylesheet" href="css/botton-row.css">
+  <link rel="stylesheet" href="css/icon.css">
   <style>
     body {
       margin: 0;
@@ -63,7 +65,10 @@
 <body>
 
 <header>
-  <h1>劇団つぎはぎ</h1>
+  <h1>
+    <img src="images/icon.png" alt="劇団アイコン" class="icon">
+    劇団つぎはぎ
+  </h1>
   <p>つぎはぎが紡ぐ、あなたの物語</p>
 </header>
 
