--- a/homepage/home.html
+++ b/homepage/home.html
@@ -66,7 +66,7 @@
 
 <header>
   <h1>
-    <img src="images/icon.png" alt="劇団アイコン" class="icon">
+    <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
     劇団つぎはぎ
   </h1>
   <p>つぎはぎが紡ぐ、あなたの物語</p>
