--- a/homepage/home.html
+++ b/homepage/home.html
@@ -6,6 +6,7 @@
   <title>劇団つぎはぎ - 公式サイト</title>
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/header-inner.css">
   <style>
     body {
       margin: 0;
@@ -65,20 +66,21 @@
 <body>
 
 <header>
-  <h1>
-    <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
-    劇団つぎはぎ
-  </h1>
-  <p>つぎはぎが紡ぐ、あなたの物語</p>
+  <div src="header-inner">
+    <h1>
+      <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
+      劇団つぎはぎ
+    </h1>
+    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <nav>
+      <a href="#home">ホーム</a>
+      <a href="about.html">劇団紹介</a>
+      <a href="#shows">公演情報</a>
+      <a href="#support">支援・チケット</a>
+      <a href="#contact">お問い合わせ</a>
+    </nav>
+  </div>
 </header>
-
-<nav>
-  <a href="#home">ホーム</a>
-  <a href="about.html">劇団紹介</a>
-  <a href="#shows">公演情報</a>
-  <a href="#support">支援・チケット</a>
-  <a href="#contact">お問い合わせ</a>
-</nav>
 
 <section id="home">
 </section>
