--- a/homepage/home.html
+++ b/homepage/home.html
@@ -73,41 +73,16 @@
     </h1>
     <p>つぎはぎが紡ぐ、あなたの物語</p>
     <nav>
-      <a href="#home">ホーム</a>
+      <a href="#home.html">ホーム</a>
       <a href="about.html">劇団紹介</a>
-      <a href="#shows">公演情報</a>
-      <a href="#support">支援・チケット</a>
-      <a href="#contact">お問い合わせ</a>
+      <a href="#shows.html">公演情報</a>
+      <a href="#support.html">支援・チケット</a>
+      <a href="#contact.html">お問い合わせ</a>
     </nav>
   </div>
 </header>
 
 <section id="home">
-</section>
-
-<section id="shows">
-  <h2>公演情報</h2>
-  <h3>【最新公演】</h3>
-  <p>『(仮題)』<br>
-  日時：2025年9月13日〜15日<br>
-  会場：未定</p>
-</section>
-
-<section id="support">
-  <h2>支援・チケット</h2>
-  <p>劇団つぎはぎでは、クラウドファンディングやチケットのご予約を受け付けております。</p>
-  <div class="button-row">
-  <a class="public-btn" href="https://example.com" target="_blank">支援ページはこちら</a>
-  <a class="public-btn" href="https://example.com/ticket" target="_blank">チケット予約ページ</a>
-  </div>
-</section>
-
-<section id="contact">
-  <h2>お問い合わせ</h2>
-  <p>出演依頼・取材・その他のお問い合わせは、以下のメールまたはSNSまでご連絡ください。</p>
-  <p>📧 メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a></p>
-  <p>📱 Twitter：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi</a></p>
-  <p>📸 Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi</a></p>
 </section>
 
 <footer>
