--- a/homepage/about.html
+++ b/homepage/about.html
@@ -66,17 +66,21 @@
 <body>
 
 <header>
-  <h1>劇団つぎはぎ</h1>
-  <p>つぎはぎが紡ぐ、あなたの物語</p>
+  <div src="header-inner">
+    <h1>
+      <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
+      劇団つぎはぎ
+    </h1>
+    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <nav>
+      <a href="#home.html">ホーム</a>
+      <a href="about.html">劇団紹介</a>
+      <a href="#shows.html">公演情報</a>
+      <a href="#support.html">支援・チケット</a>
+      <a href="#contact.html">お問い合わせ</a>
+    </nav>
+  </div>
 </header>
-
-<nav>
-  <a href="home.html">ホーム</a>
-  <a href="#about">劇団紹介</a>
-  <a href="#shows">公演情報</a>
-  <a href="#support">支援・チケット</a>
-  <a href="#contact">お問い合わせ</a>
-</nav>
 
 <section id="about">
   <h2>劇団紹介</h2>
