--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -65,6 +65,31 @@
 </head>
 <body>
 
+<header>
+  <div src="header-inner">
+    <h1>
+      <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
+      劇団つぎはぎ
+    </h1>
+    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <nav>
+      <a href="#home.html">ホーム</a>
+      <a href="about.html">劇団紹介</a>
+      <a href="#shows.html">公演情報</a>
+      <a href="#support.html">支援・チケット</a>
+      <a href="#contact.html">お問い合わせ</a>
+    </nav>
+  </div>
+</header>
+
+<section id="contact">
+  <h2>お問い合わせ</h2>
+  <p>出演依頼・取材・その他のお問い合わせは、以下のメールまたはSNSまでご連絡ください。</p>
+  <p>📧 メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a></p>
+  <p>📱 Twitter：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi</a></p>
+  <p>📸 Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi</a></p>
+</section>
+
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
