--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -65,6 +65,31 @@
 </head>
 <body>
 
+<header>
+  <div src="header-inner">
+    <h1>
+      <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
+      劇団つぎはぎ
+    </h1>
+    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <nav>
+      <a href="#home.html">ホーム</a>
+      <a href="about.html">劇団紹介</a>
+      <a href="#shows.html">公演情報</a>
+      <a href="#support.html">支援・チケット</a>
+      <a href="#contact.html">お問い合わせ</a>
+    </nav>
+  </div>
+</header>
+
+<section id="shows">
+  <h2>公演情報</h2>
+  <h3>【最新公演】</h3>
+  <p>『(仮題)』<br>
+  日時：2025年9月13日〜15日<br>
+  会場：未定</p>
+</section
+
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
