--- a/homepage/support.html
+++ b/homepage/support.html
@@ -65,6 +65,32 @@
 </head>
 <body>
 
+<header>
+  <div src="header-inner">
+    <h1>
+      <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
+      劇団つぎはぎ
+    </h1>
+    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <nav>
+      <a href="#home.html">ホーム</a>
+      <a href="about.html">劇団紹介</a>
+      <a href="#shows.html">公演情報</a>
+      <a href="#support.html">支援・チケット</a>
+      <a href="#contact.html">お問い合わせ</a>
+    </nav>
+  </div>
+</header>
+
+<section id="support">
+  <h2>支援・チケット</h2>
+  <p>劇団つぎはぎでは、クラウドファンディングやチケットのご予約を受け付けております。</p>
+  <div class="button-row">
+  <a class="public-btn" href="https://example.com" target="_blank">支援ページはこちら</a>
+  <a class="public-btn" href="https://example.com/ticket" target="_blank">チケット予約ページ</a>
+  </div>
+</section>
+
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
