--- a/homepage/home.html
+++ b/homepage/home.html
@@ -73,17 +73,14 @@
     </h1>
     <p>つぎはぎが紡ぐ、あなたの物語</p>
     <nav>
-      <a href="#home.html">ホーム</a>
+      <a href="home.html">ホーム</a>
       <a href="about.html">劇団紹介</a>
-      <a href="#shows.html">公演情報</a>
-      <a href="#support.html">支援・チケット</a>
-      <a href="#contact.html">お問い合わせ</a>
+      <a href="shows.html">公演情報</a>
+      <a href="support.html">支援・チケット</a>
+      <a href="contact.html">お問い合わせ</a>
     </nav>
   </div>
 </header>
-
-<section id="home">
-</section>
 
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
