--- a/homepage/support.html
+++ b/homepage/support.html
@@ -73,11 +73,11 @@
     </h1>
     <p>つぎはぎが紡ぐ、あなたの物語</p>
     <nav>
-      <a href="#home.html">ホーム</a>
+      <a href="home.html">ホーム</a>
       <a href="about.html">劇団紹介</a>
-      <a href="#shows.html">公演情報</a>
-      <a href="#support.html">支援・チケット</a>
-      <a href="#contact.html">お問い合わせ</a>
+      <a href="shows.html">公演情報</a>
+      <a href="support.html">支援・チケット</a>
+      <a href="contact.html">お問い合わせ</a>
     </nav>
   </div>
 </header>
