--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -88,7 +88,7 @@
   <p>『(仮題)』<br>
   日時：2025年9月13日〜15日<br>
   会場：未定</p>
-</section
+</section>
 
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
