--- a/homepage/home.html
+++ b/homepage/home.html
@@ -82,7 +82,18 @@
   </div>
 </header>
 
-<section id="home">
+<section>
+  <h2>新着情報</h2>
+  <h3>● 劇団公式HPを開設</h3>
+  <h3>● 初回講演、計画始動！</h3>
+    <a href="support.html">詳細はこちら</a>
+
+</section>
+
+<section>
+  <h2>クラファン募集中！</h2>
+  <p>私たちの劇団を応援してくれる方を探しています</p>
+  <a href="support.html">詳細はこちら</a>
 </section>
 
 <footer>
