お問い合わせ欄にアイコンを追加 icoファイルを追加

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>劇団つぎはぎ - 公式サイト</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/header-inner.css">
@@ -84,10 +85,19 @@
 
 <section id="contact">
   <h2>お問い合わせ</h2>
-  <p>出演依頼・取材・その他のお問い合わせは、以下のメールまたはSNSまでご連絡ください。</p>
-  <p>📧 メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a></p>
-  <p>📱 Twitter：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi</a></p>
-  <p>📸 Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi</a></p>
+  <p>劇団つぎはぎへのご連絡・ご質問・ご依頼は、下記の方法でお気軽にご連絡ください。<br>公演に関するお問い合わせ、取材のご相談など、内容に応じて対応いたします。</p>
+  <p>
+    <img src="images/mail-icon.png" alt="メールアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a>
+  </p>
+  <p>
+    <img src="images/x-icon.png" alt="x-icon" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Twitter：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi</a>
+  </p>
+  <p>
+    <img src="images/instagram-icon.png" alt="インスタアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi</a>
+  </p>
 </section>
 
 <footer>
