--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>劇団つぎはぎ - 公式サイト</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/header-inner.css">
