--- a/homepage/about.html
+++ b/homepage/about.html
@@ -98,6 +98,7 @@
   <div class="member">● そーた（舞台装置）</div>
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
+  <div class="member">● のぐち（スタッフ）</div>
 </section>
 
 <footer>
