"images/icon-circle_transparent.png"ðADD

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -69,7 +69,7 @@
 <header>
   <div src="header-inner">
     <h1>
-      <img src="images/icon_transparent.png" alt="劇団アイコン" class="icon">
+      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
       劇団つぎはぎ
     </h1>
     <p>つぎはぎが紡ぐ、あなたの物語</p>
