--- a/homepage/home.html
+++ b/homepage/home.html
@@ -12,17 +12,17 @@
     body {
       margin: 0;
       font-family: 'Helvetica', sans-serif;
-      background: #fff;
+      background: #f1f2ec;
       color: #333;
     }
     header {
       background: #33327e;
-      color: white;
+      color: #f1f2ec;
       padding: 30px 20px;
       text-align: center;
     }
     nav {
-      background: #f4f4f4;
+      background: #f1f2ec;
       padding: 10px 20px;
       text-align: center;
     }
@@ -42,7 +42,7 @@
     }
     footer {
       background: #33327e;
-      color: white;
+      color: #f1f2ec;
       text-align: center;
       padding: 20px;
       margin-top: 40px;
@@ -55,7 +55,7 @@
       margin-top: 15px;
       padding: 10px 20px;
       background: #28a745;
-      color: white;
+      color: #f1f2ec;
       text-decoration: none;
       border-radius: 5px;
     }
