--- a/homepage/about.html
+++ b/homepage/about.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>劇団つぎはぎ - 公式サイト</title>
+  <link rel="stylesheet" href="css/active.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/header-inner.css">
+  <link rel="stylesheet" href="css/person-img.css">
   <style>
     body {
       margin: 0;
@@ -75,7 +77,7 @@
     <p>つぎはぎが紡ぐ、あなたの物語</p>
     <nav>
       <a href="home.html">ホーム</a>
-      <a href="about.html">劇団紹介</a>
+      <a href="about.html" class="active">劇団紹介</a>
       <a href="shows.html">公演情報</a>
       <a href="support.html">支援・チケット</a>
       <a href="contact.html">お問い合わせ</a>
@@ -95,6 +97,24 @@
   <div class="member">● 高橋 亜煌（役者）</div>
   <div class="member">● 龍之介（役者）</div>
   <div class="member">● いーやま（役者）</div>
+  <li>
+    <p class="person-img">
+      <img src="images/person/IiyamaKentaro.png" alt="いーやま" class="person-img">
+    </p>
+    <div class="texBlock">
+      <p class="name">
+        "いーやま"
+        <span class="txtS">／役者</span>
+      </p>
+      <p class="txt">
+        みなさんこんにちは！いーやまです！よろしくお願いします♪(仮テキスト)
+        <br>
+        人物紹介をかくか？どう使うかは未定
+        <br>
+        意気込みなども書く？
+      </p>
+    </div> 
+  </li>
   <div class="member">● そーた（舞台装置）</div>
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
@@ -105,5 +125,26 @@
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
 
+<button id="toTopBtn" title="ページの先頭へ">↑</button>
+<script>
+  const toTopBtn = document.getElementById("toTopBtn");
+
+  // スクロールで表示・非表示を切り替え
+  window.onscroll = function () {
+    if (document.documentElement.scrollTop > 300) {
+      toTopBtn.style.display = "block";
+    } else {
+      toTopBtn.style.display = "none";
+    }
+  };
+
+  // ボタンをクリックするとトップに戻る
+  toTopBtn.addEventListener("click", () => {
+    window.scrollTo({
+      top: 0,
+      behavior: "smooth"
+    });
+  });
+</script>
 </body>
 </html>
