--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>劇団つぎはぎ - 公式サイト</title>
+  <link rel="stylesheet" href="css/active.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/icon.css">
@@ -76,7 +77,7 @@
     <nav>
       <a href="home.html">ホーム</a>
       <a href="about.html">劇団紹介</a>
-      <a href="shows.html">公演情報</a>
+      <a href="shows.html" class="active">公演情報</a>
       <a href="support.html">支援・チケット</a>
       <a href="contact.html">お問い合わせ</a>
     </nav>
