--- a/homepage/home.html
+++ b/homepage/home.html
@@ -8,62 +8,8 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header-inner.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Helvetica', sans-serif;
-      background: #f1f2ec;
-      color: #333;
-    }
-    header {
-      background: #33327e;
-      color: #f1f2ec;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    nav {
-      background: #f1f2ec;
-      padding: 10px 20px;
-      text-align: center;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #33327e;
-      font-weight: bold;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h2 {
-      color: #33327e;
-    }
-    footer {
-      background: #33327e;
-      color: #f1f2ec;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-    .member {
-      margin: 10px 0;
-    }
-    .public-btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #28a745;
-      color: #f1f2ec;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    .public-btn:hover {
-      background: #218838;
-    }
-  </style>
 </head>
 <body>
 
@@ -84,10 +30,10 @@
   </div>
 </header>
 
-<section>
+<section id="home">
   <h2>新着情報</h2>
-  <h3>● 劇団公式HPを開設</h3>
-  <h3>● 初回講演、計画始動！</h3>
+  <p>● 劇団公式HPを開設</p>
+  <p>● 初回講演、計画始動！</p>
     <a href="support.html">詳細はこちら</a>
 
 </section>
