--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>劇団つぎはぎ - 公式サイト</title>
-  <link rel="stylesheet" href="css/active.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
+  <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header-inner.css">
+  <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
 <body>
 
