Keep width and margins consistent

--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -7,13 +7,14 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
+  <link rel="stylesheet" href="container.css">
   <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
 <body>
-
+<div class="container">
 <header>
   <div src="header-inner">
     <h1>
@@ -42,6 +43,6 @@
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
-
+</div>
 </body>
 </html>
