--- a/homepage/about.html
+++ b/homepage/about.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
+  <link rel="stylesheet" href="container.css">
   <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/person-img.css">
@@ -14,7 +15,7 @@
   <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
 <body>
-
+<div class="container">
 <header>
   <div src="header-inner">
     <h1>
@@ -93,5 +94,6 @@
     });
   });
 </script>
+</div>
 </body>
 </html>
