--- a/homepage/about.html
+++ b/homepage/about.html
@@ -7,11 +7,11 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
-  <link rel="stylesheet" href="container.css">
+  <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/person-img.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
 <body>
@@ -24,6 +24,7 @@
     </h1>
     <p>つぎはぎが紡ぐ、あなたの物語</p>
     <nav>
+      position:fixed
       <a href="home.html">ホーム</a>
       <a href="about.html" class="active">劇団紹介</a>
       <a href="shows.html">公演情報</a>
