--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -7,10 +7,10 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
-  <link rel="stylesheet" href="container.css">
+  <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="css/header-inner.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
 <body>
