--- a/homepage/about.html
+++ b/homepage/about.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
+  <meta property="og:title" content="劇団つぎはぎ 公式サイト">
+  <meta property="og:description" content="誰かの心にそっと寄り添う舞台を届けます。">
+  <meta property="og:image" content="https://ユーザー名.github.io/tsugihagi/images/og-image.png">
+
+
   <title>劇団つぎはぎ - 公式サイト</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/container.css">
