change hedder message

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -20,7 +20,7 @@
       <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
       劇団つぎはぎ
     </h1>
-    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
     <nav>
       <a href="home.html" class="active">ホーム</a>
       <a href="about.html">劇団紹介</a>
