--- a/homepage/about.html
+++ b/homepage/about.html
@@ -27,7 +27,7 @@
       <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
       劇団つぎはぎ
     </h1>
-    <p>つぎはぎが紡ぐ、あなたの物語</p>
+    <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
     <nav>
       position:fixed
       <a href="home.html">ホーム</a>
