--- a/homepage/about.html
+++ b/homepage/about.html
@@ -75,6 +75,12 @@
   <div class="member">● のぐち（スタッフ）</div>
 </section>
 
+<section>
+  <h3>沿革</h3>
+  <p>2025年5月  劇団結成</p>
+  <p>2025年6月  ホームページ及び公式SNSアカウント開設</p>
+</section>
+
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
