--- a/homepage/home.html
+++ b/homepage/home.html
@@ -33,9 +33,9 @@
 
 <section id="home">
   <h2>新着情報</h2>
+ <a href="contact.html">● 劇団公式SNSアカウント開設</a>
   <p>● 劇団公式HPを開設</p>
-  <p>● 初回講演、計画始動！</p>
-    <a href="support.html">詳細はこちら</a>
+  <a href="shows.html">● 初回講演、始動！</a>
 
 </section>
 
