nav out ov header

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -3,12 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
-  <meta property="og:title" content="劇団つぎはぎ 公式サイト">
-  <meta property="og:description" content="誰かの心にそっと寄り添う舞台を届けます。">
-  <meta property="og:image" content="https://ユーザー名.github.io/tsugihagi/images/og-image.png">
-
-
   <title>劇団つぎはぎ - 公式サイト</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
@@ -19,25 +13,26 @@
   <link rel="stylesheet" href="css/person-img.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
+
 <body>
 <div class="container">
 <header>
-  <div src="header-inner">
+  <div class="header-inner">
     <h1>
       <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
-    <nav>
-      position:fixed
-      <a href="home.html">ホーム</a>
-      <a href="about.html" class="active">劇団紹介</a>
-      <a href="shows.html">公演情報</a>
-      <a href="support.html">支援・チケット</a>
-      <a href="contact.html">お問い合わせ</a>
-    </nav>
   </div>
 </header>
+
+<nav>
+  <a href="home.html">ホーム</a>
+  <a href="about.html" class="active">劇団紹介</a>
+  <a href="shows.html">公演情報</a>
+  <a href="support.html">支援・チケット</a>
+  <a href="contact.html">お問い合わせ</a>
+</nav>
 
 <section id="about">
   <h2>劇団紹介</h2>
@@ -51,7 +46,6 @@
   <div class="member">● 高橋 亜煌（役者）</div>
   <div class="member">● 龍之介（役者）</div>
   <div class="member">● いーやま（役者）</div>
-  <li>
     <p class="person-img">
       <img src="images/person/IiyamaKentaro.png" alt="いーやま" class="person-img">
     </p>
@@ -68,7 +62,6 @@
         意気込みなども書く？
       </p>
     </div> 
-  </li>
   <div class="member">● そーた（舞台装置）</div>
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
