--- a/homepage/nopage.html
+++ b/homepage/nopage.html
@@ -12,24 +12,26 @@
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
 </head>
+
 <body>
 <div class="container">
 <header>
-  <div src="header-inner">
+  <div class="header-inner">
     <h1>
       <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
-    <nav>
-      <a href="home.html">ホーム</a>
-      <a href="about.html">劇団紹介</a>
-      <a href="shows.html">公演情報</a>
-      <a href="support.html">支援・チケット</a>
-      <a href="contact.html">お問い合わせ</a>
-    </nav>
   </div>
 </header>
+
+<nav>
+  <a href="home.html">ホーム</a>
+  <a href="about.html" class="active">劇団紹介</a>
+  <a href="shows.html">公演情報</a>
+  <a href="support.html">支援・チケット</a>
+  <a href="contact.html">お問い合わせ</a>
+</nav>
 
 <section id="nopage">
   <h2>ページ準備中！</h2>
