--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
+  <meta property="og:title" content="劇団つぎはぎ 公式サイト">
+  <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
+  <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
   <title>劇団つぎはぎ - 公式サイト</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
