--- a/homepage/home.html
+++ b/homepage/home.html
@@ -30,8 +30,8 @@
 </header>
 
 <nav>
-  <a href="home.html">ホーム</a>
-  <a href="about.html" class="active">劇団紹介</a>
+  <a href="home.html" class="active">ホーム</a>
+  <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
   <a href="support.html">支援・チケット</a>
   <a href="contact.html">お問い合わせ</a>
