--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -31,10 +31,10 @@
 
 <nav>
   <a href="home.html">ホーム</a>
-  <a href="about.html" class="active">劇団紹介</a>
+  <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
   <a href="support.html">支援・チケット</a>
-  <a href="contact.html">お問い合わせ</a>
+  <a href="contact.html" class="active">お問い合わせ</a>
 </nav>
 
 <section id="contact">
