--- a/homepage/support.html
+++ b/homepage/support.html
@@ -31,9 +31,9 @@
 
 <nav>
   <a href="home.html">ホーム</a>
-  <a href="about.html" class="active">劇団紹介</a>
+  <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
-  <a href="support.html">支援・チケット</a>
+  <a href="support.html" class="active">支援・チケット</a>
   <a href="contact.html">お問い合わせ</a>
 </nav>
 
