delete introduction prototype

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -49,23 +49,7 @@
   <div class="member">● 早記（役者）</div>
   <div class="member">● 高橋 亜煌（役者）</div>
   <div class="member">● 龍之介（役者）</div>
-  <div class="member">● いーやま（役者）</div>
-    <p class="person-img">
-      <img src="images/person/IiyamaKentaro.png" alt="いーやま" class="person-img">
-    </p>
-    <div class="texBlock">
-      <p class="name">
-        "いーやま"
-        <span class="txtS">／役者</span>
-      </p>
-      <p class="txt">
-        みなさんこんにちは！いーやまです！よろしくお願いします♪(仮テキスト)
-        <br>
-        人物紹介をかくか？どう使うかは未定
-        <br>
-        意気込みなども書く？
-      </p>
-    </div> 
+  <div class="member">● いーやま（役者・システム開発）</div>
   <div class="member">● そーた（舞台装置）</div>
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
