--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -40,9 +40,9 @@
 <section id="shows">
   <h2>公演情報</h2>
   <h3>【最新公演】</h3>
-  <p>『(仮題)』<br>
+  <p>『大人なら、大人だから、大人でも。(仮題)』<br>
   日時：2025年9月13日〜15日<br>
-  会場：未定</p>
+  会場：徳島県</p>
 </section>
 
 <footer>
