--- a/homepage/support.html
+++ b/homepage/support.html
@@ -7,6 +7,12 @@
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
   <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
   <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
+  <meta name="twitter:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
+  <meta name="twitter:image" content="https://tsugihagi.com/images/og-image.png">
+  <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
+  <meta name="twitter:site" content="@tsugihagi_troup">
   <title>劇団つぎはぎ - 公式サイト</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
