update contact.html rename 55,59lines

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -52,11 +52,11 @@
   </p>
   <p>
     <img src="images/x-icon.png" alt="x-icon" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    Twitter：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi</a>
+    X(旧Twitter)：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi_troup</a>
   </p>
   <p>
     <img src="images/instagram-icon.png" alt="インスタアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi</a>
+    Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi_troup</a>
   </p>
 </section>
 
