--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -47,8 +47,8 @@
   <h2>公演情報</h2>
   <h3>【最新公演】</h3>
   <p>『大人なら、大人だから、大人でも。(仮題)』<br>
-  日時：2025年9月13日〜15日<br>
-  会場：徳島県</p>
+  日時：2025年9月14日〜16日<br>
+  会場：藍住町総合文化ホール</p>
 </section>
 
 <footer>
