--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -18,9 +18,10 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
+  <script src="js/toTop.js"></script>
 </head>
 
 <body>
@@ -64,27 +65,6 @@
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
 
-<button id="toTopBtn" title="ページの先頭へ">↑</button>
-<script>
-  const toTopBtn = document.getElementById("toTopBtn");
-
-  // スクロールで表示・非表示を切り替え
-  window.onscroll = function () {
-    if (document.documentElement.scrollTop > 300) {
-      toTopBtn.style.display = "block";
-    } else {
-      toTopBtn.style.display = "none";
-    }
-  };
-
-  // ボタンをクリックするとトップに戻る
-  toTopBtn.addEventListener("click", () => {
-    window.scrollTo({
-      top: 0,
-      behavior: "smooth"
-    });
-  });
-</script>
 </div>
 </body>
 </html>
