I don't understand why it doesn't work.

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/person-img.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <link rel="stylesheet" href="css/nav.css">
@@ -39,7 +39,7 @@
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
   </div>
 </header>
-<button id="navToggle" class="nav-toggle">☰</button>
+<button id="navToggle" class="nav-toggle"></button>
 <nav id="mainNav" class="nav">
   <a href="home.html">ホーム</a>
   <a href="about.html">劇団紹介</a>
