change about.html 62line

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -59,7 +59,7 @@
   <div class="member">● 早記（役者）</div>
   <div class="member">● 高橋 亜煌（役者）</div>
   <div class="member">● 龍之介（役者）</div>
-  <div class="member">● いーやま（役者・システム開発）</div>
+  <div class="member">● いーやま（役者）</div>
   <div class="member">● そーた（舞台装置）</div>
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
