--- a/homepage/home.html
+++ b/homepage/home.html
@@ -18,9 +18,11 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
-    <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
+  <script src="js/iconClick.js"></script>
+  <script src="js/toTop.js"></script>
 </head>
 
 <body>
@@ -28,7 +30,7 @@
 <header>
   <div class="header-inner">
     <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
+      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
