--- a/homepage/secret.html
+++ b/homepage/secret.html
@@ -18,11 +18,9 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
+    <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
-  <script src="js/iconClick.js"></script>
-  <script src="js/toTop.js"></script>
 </head>
 
 <body>
@@ -30,7 +28,7 @@
 <header>
   <div class="header-inner">
     <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
+      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
@@ -38,34 +36,52 @@
 </header>
 
 <nav>
-  <a href="home.html">ホーム</a>
+  <a href="home.html" class="active">ホーム</a>
   <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
   <a href="support.html">支援・チケット</a>
-  <a href="contact.html" class="active">お問い合わせ</a>
+  <a href="contact.html">お問い合わせ</a>
 </nav>
 
-<section id="contact">
-  <h2>お問い合わせ</h2>
-  <p>劇団つぎはぎへのご連絡・ご質問・ご依頼は、下記の方法でお気軽にご連絡ください。<br>公演に関するお問い合わせ、取材のご相談など、内容に応じて対応いたします。</p>
-  <p>
-    <img src="images/mail-icon.png" alt="メールアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a>
-  </p>
-  <p>
-    <img src="images/x-icon.png" alt="x-icon" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    X(旧Twitter)：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi_troup</a>
-  </p>
-  <p>
-    <img src="images/instagram-icon.png" alt="インスタアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi_troup</a>
-  </p>
+<section id="home">
+  <h2>新着情報</h2>
+ <a href="contact.html">● 劇団公式SNSアカウント開設</a>
+  <p>● 劇団公式HPを開設</p>
+  <a href="shows.html">● 初回講演、始動！</a>
+
+</section>
+
+<section>
+  <h2>クラファン募集中！</h2>
+  <p>私たちの劇団を応援してくれる方を探しています</p>
+  <a href="support.html">詳細はこちら</a>
 </section>
 
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
 </footer>
 
+<button id="toTopBtn" title="ページの先頭へ">↑</button>
+<script>
+  const toTopBtn = document.getElementById("toTopBtn");
+
+  // スクロールで表示・非表示を切り替え
+  window.onscroll = function () {
+    if (document.documentElement.scrollTop > 300) {
+      toTopBtn.style.display = "block";
+    } else {
+      toTopBtn.style.display = "none";
+    }
+  };
+
+  // ボタンをクリックするとトップに戻る
+  toTopBtn.addEventListener("click", () => {
+    window.scrollTo({
+      top: 0,
+      behavior: "smooth"
+    });
+  });
+</script>
 </div>
 </body>
 </html>
