--- a/homepage/about.html
+++ b/homepage/about.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="css/person-img.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <link rel="stylesheet" href="css/nav.css">
+  <script src="js/iconClick.js"></script>
   <script src="js/toTop.js"></script>
   <script src="js/navToggle.js"></script>
 </head>
@@ -33,7 +34,7 @@
 <header>
   <div class="header-inner">
     <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
+      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon"> 
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
