add admin screen

--- a/homepage/secret.html
+++ b/homepage/secret.html
@@ -18,9 +18,10 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
-    <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
+  <link rel="stylesheet" href="css/login.css" />
 </head>
 
 <body>
@@ -36,26 +37,39 @@
 </header>
 
 <nav>
-  <a href="home.html" class="active">ホーム</a>
+  <a href="home.html">ホーム</a>
   <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
   <a href="support.html">支援・チケット</a>
   <a href="contact.html">お問い合わせ</a>
 </nav>
 
-<section id="home">
-  <h2>新着情報</h2>
- <a href="contact.html">● 劇団公式SNSアカウント開設</a>
-  <p>● 劇団公式HPを開設</p>
-  <a href="shows.html">● 初回講演、始動！</a>
+<div class="login-container">
+  <h1>管理ログイン</h1>
+  <form id="loginForm">
+    <input type="password" id="password" placeholder="パスワードを入力">
+    <button type="submit">ログイン</button>
+  </form>
+   <p id="error" style="color:red;"></p>
+</div>
 
-</section>
+<script>
+  const form = document.getElementById('loginForm');
+  const error = document.getElementById('error');
 
-<section>
-  <h2>クラファン募集中！</h2>
-  <p>私たちの劇団を応援してくれる方を探しています</p>
-  <a href="support.html">詳細はこちら</a>
-</section>
+  form.addEventListener('submit', e => {
+    e.preventDefault();
+    const pw = document.getElementById('password').value;
+
+    // 仮のパスワード認証
+    if (pw === 'tsugihagi06') {
+      sessionStorage.setItem('loggedIn', 'true');
+      location.href = 'admin.html';
+    } else {
+      error.textContent = 'パスワードが間違っています';
+    }
+  });
+</script>
 
 <footer>
   <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
