add about.html l68(なみる（オールラウンダー）)

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -65,6 +65,7 @@
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
   <div class="member">● のぐち（スタッフ）</div>
+  <div class="menber">● なみる（オールラウンダー）</div>
 </section>
 
 <section>
