--- a/homepage/about.html
+++ b/homepage/about.html
@@ -18,15 +18,11 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
-  <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/person-img.css">
+  <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
-  <link rel="stylesheet" href="css/nav.css">
   <script src="js/iconClick.js"></script>
   <script src="js/toTop.js"></script>
-  <script src="js/navToggle.js"></script>
 </head>
 
 <body>
@@ -65,13 +61,14 @@
   <div class="member">● angie（宣伝美術）</div>
   <div class="member">● くろだ（スタッフ）</div>
   <div class="member">● のぐち（スタッフ）</div>
-  <div class="menber">● なみる（オールラウンダー）</div>
+  <div class="menber">● なみる（スタッフ）</div>
 </section>
 
 <section>
   <h3>沿革</h3>
   <p>2025年5月  劇団結成</p>
-  <p>2025年6月  ホームページ及び公式SNSアカウント開設</p>
+  <p>2025年6月  公式SNSアカウント開設</p>
+  <p>2025年8月  ホームページ開設</p>
 </section>
 
 <footer>
