--- a/homepage/support.html
+++ b/homepage/support.html
@@ -49,7 +49,7 @@
   <h2>支援・チケット</h2>
   <p>劇団つぎはぎでは、クラウドファンディングやチケットのご予約を受け付けております。</p>
   <div class="button-row">
-  <a class="public-btn" href="nopage.html" target="_blank">支援ページはこちら</a>
+  <a class="public-btn" href="https://camp-fire.jp/projects/862102/view?utm_campaign=cp_po_share_c_msg_mypage_projects_show" target="_blank">支援ページはこちら</a>
   <a class="public-btn" href="nopage.html" target="_blank">チケット予約ページ</a>
   </div>
 </section>
