--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -48,8 +48,8 @@
 <section id="shows">
   <h2>公演情報</h2>
   <h3>【最新公演】</h3>
-  <p>『大人なら、大人だから、大人でも。(仮題)』<br>
-  日時：2025年9月14日〜16日<br>
+  <p>『未定（近日公開予定）』<br>
+  日時：2025年9月13日(土)10:00~,13:30~,17:00~<br>　　　9月14日(日)10:00~,13:30~<br>
   会場：藍住町総合文化ホール</p>
 </section>
 
