--- a/homepage/about.html
+++ b/homepage/about.html
@@ -30,16 +30,16 @@
 <header>
   <div class="header-inner">
     <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon"> 
+      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
   </div>
 </header>
-<button id="navToggle" class="nav-toggle"></button>
-<nav id="mainNav" class="nav">
+
+<nav>
   <a href="home.html">ホーム</a>
-  <a href="about.html">劇団紹介</a>
+  <a href="about.html" class="active">劇団紹介</a>
   <a href="shows.html">公演情報</a>
   <a href="support.html">支援・チケット</a>
   <a href="contact.html">お問い合わせ</a>
