add meta to index.html

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index,follow">
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
   <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
