hotfix problem with navigation being on the left side

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -18,8 +18,9 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
   <script src="js/toTop.js"></script>
