--- a/homepage/secret.html
+++ b/homepage/secret.html
@@ -18,10 +18,13 @@
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
   <link rel="stylesheet" href="css/header-inner.css">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
-  <link rel="stylesheet" href="css/login.css" />
+  <script src="js/iconClick.js"></script>
+  <script src="js/navToggle.js"></script>
+  <script src="js/toTop.js"></script>
 </head>
 
 <body>
@@ -29,14 +32,16 @@
 <header>
   <div class="header-inner">
     <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon">
+      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
       劇団つぎはぎ
     </h1>
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
   </div>
 </header>
 
-<nav>
+<button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
+
+<nav class="nav" id="navMenu">
   <a href="home.html">ホーム</a>
   <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
