--- a/homepage/about.html
+++ b/homepage/about.html
@@ -39,7 +39,9 @@
   </div>
 </header>
 
-<nav>
+<button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
+
+<nav class="nav" id="navMenu">
   <a href="home.html">ホーム</a>
   <a href="about.html" class="active">劇団紹介</a>
   <a href="shows.html">公演情報</a>
