--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -20,8 +20,10 @@
   <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
+  <script src="js/navToggle.js"></script>
   <script src="js/toTop.js"></script>
 </head>
 
@@ -37,7 +39,9 @@
   </div>
 </header>
 
-<nav>
+<button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
+
+<nav class="nav" id="navMenu">
   <a href="home.html">ホーム</a>
   <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
