hotfix meta property description

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
-  <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
+  <meta property="og:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
   <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
